# rey

./: .gitignore  Cargo.toml  db.rs  rey.toml
.github/workflows/: cli.yml
src/: lib.rs  main.rs
src/console/: clean.rs  console.rs  edit.rs  generate.rs  init.rs  mod.rs  prompts.rs  runs.rs  scan.rs  serve.rs  watch.rs  watchers.rs
src/console/views/: admin.rs  mod.rs  web.rs
src/render/: filters.rs  funcs.rs  helpers.rs
