[package]
name = "rey"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/hackiado/rey"
authors = ["Seido <seido@hackiado.com>"]
keywords = ["blog", "static site generator", "markdown", "rust"]
description = "A static site generator for blogs, powered by Rust."
license = "AGPL-3.0"
readme = "README.md"

[[bin]]
name = "rey"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
comrak = "0.41.0"
emoji = "0.2.1"
features = "0.10.0"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = [
    "json",
    "secrets",
    "serde_json",
    "tls",
] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
slug = "0.1.6"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
inquire = { version = "0.7.5", features = ["console", "date", "editor"] }
crossterm = "0.29.0"
tabled = "0.20.0"
clap = "4.5.47"
ignore = "0.4.23"
toml = "0.9.5"
notify = "8.2.0"
notify-debouncer-mini = { version = "0.7.0", features = ["serialization-compat-6"] }
anyhow = "1.0.99"
ctrlc = { version = "3.5.0", features = ["termination"] }
